# jpegoptim-py

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
scripts/: bump_jpegoptim.py
