[metadata]
name = jpegoptim_py
description = Python wrapper around invoking jpegoptim (https://github.com/tjko/jpegoptim)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UnknownPlatypus/jpegoptim-py
author = Thibaut Decombe
author_email = thibaut.decombe@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.7
