[metadata]
name = jpegoptim_py
version = 1.5.6.1
description = Python wrapper around invoking jpegoptim (https://github.com/tjko/jpegoptim)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UnknownPlatypus/jpegoptim-py
author = Thibaut Decombe
author_email = thibaut.decombe@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.8
setup_requires =
    setuptools-download

[setuptools_download]
download_scripts =
    [jpegoptim]
    group = jpegoptim-binary
    marker = sys_platform == "linux" and platform_machine == "x86_64"
    url = https://github.com/tjko/jpegoptim/releases/download/v1.5.6/jpegoptim-1.5.6-x64-linux.zip
    sha256 = f480db3bdda996cb1ed366f0877f2fe9e0d8708487f7d00e4c7166b52a9e2c1a
    extract = zip
    extract_path = jpegoptim
    [jpegoptim]
    group = jpegoptim-binary
    marker = sys_platform == "darwin" and platform_machine == "x86_64"
    marker = sys_platform == "darwin" and platform_machine == "arm64"
    url = https://github.com/tjko/jpegoptim/releases/download/v1.5.6/jpegoptim-1.5.6-x64-osx.zip
    sha256 = 5ca21c2f8f02ed815b00e453b0ea235d84ac6a99704d15bb587f952f700d6d44
    extract = zip
    extract_path = jpegoptim
    [jpegoptim.exe]
    group = jpegoptim-binary
    marker = sys_platform == "win32" and platform_machine == "AMD64"
    marker = sys_platform == "win32" and platform_machine == "ARM64"
    marker = sys_platform == "cygwin" and platform_machine == "x86_64"
    url = https://github.com/tjko/jpegoptim/releases/download/v1.5.6/jpegoptim-1.5.6-x64-windows.zip
    sha256 = db2d8caee88f2665b772c4591cba223b8b729500b88266dc06d4bf79d28fe11a
    extract = zip
    extract_path = jpegoptim.exe
